--- a/order-dev.yml
+++ b/order-dev.yml
@@ -14,8 +14,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-env:
-  dev
+env: dev
   
-tag:
-  release
+tag: release
