--- a/order-test.yml
+++ b/order-test.yml
@@ -12,4 +12,12 @@ spring:
       show-sql: true
     jackson:
       default-property-inclusion: non_null
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 env: test
+girl:
+  name: Michell
+  age: 52
