--- a/product-dev.yml
+++ b/product-dev.yml
@@ -12,4 +12,9 @@ spring:
       show-sql: true
     jackson:
       default-property-inclusion: non_null
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 env: dev
