--- a/order-dev.yml
+++ b/order-dev.yml
@@ -17,6 +17,11 @@ spring:
     port: 5672
     username: guest
     password: guest 
+    listener:
+      simple:
+        acknowledge-mode: manual
+        concurrency: 5
+        max-concurrency: 10
 env: dev
 girl:
   name: Michell
