--- a/order-dev.yml
+++ b/order-dev.yml
@@ -16,7 +16,11 @@ spring:
     host: localhost
     port: 5672
     username: guest
-    password: guest 
+    password: guest
+    publisher-confirms: true
+    publisher-returns: true
+    template:
+      mandatory: true
     listener:
       simple:
         acknowledge-mode: manual
